--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,8 @@ test:
 production:
   <<: *default
   database: outputs_habit_production
-  username: outputs_habit
-  password: <%= ENV['OUTPUTS_HABIT_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+  # username: outputs_habit
+  # password: <%= ENV['OUTPUTS_HABIT_DATABASE_PASSWORD'] %>
